--- a/public/styles/page.css
+++ b/public/styles/page.css
@@ -20,7 +20,6 @@
     right: 25px;
 }
 
-
 p{
     margin: 4vh 4vw 1vh 4vw;
     width: 90%;
@@ -35,19 +34,28 @@ img{
     margin-top: 5%;
 }
 
+
 @media screen and (min-width: 768px) {
     img{
         margin: 4vh 4vw 1vh 4vw;
         position: relative;
         object-fit: contain;
         height: 50%;
-        width: 50%;
+        width: 40%;
         margin-top: 5%;
+    }
+
+    html{
+        scroll-behavior: smooth;
     }
 
     p{
         margin: 4vh 4vw 1vh 4vw;
         width: 40%;
+    }
+
+    li{
+        margin: 4vh 4vw 1vh 4vw;
     }
 
     .right{
@@ -57,9 +65,18 @@ img{
     .left{
         float: left;
     }
+
+    #divider{
+        height: 400px;
+    }
+
+    footer{
+        height: 10em;
+    }
 }
 
 .circle-div img{
+    cursor: pointer;
     margin: 6px 6px 6px 6px;
     position: relative;
     object-fit: auto;
