--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -31,8 +31,9 @@ html{ height: 100%;  overflow-x: hidden;}
 
 iframe{
     width: 100%;
-    height: 100%;
-    max-height:95%;
+    top: 104px;
+    height: calc(100% - 50px);
+    max-height: calc(100% - 50px);
     border: 0;
     z-index: -1;
 }
