--- a/public/styles/page.css
+++ b/public/styles/page.css
@@ -11,7 +11,7 @@
 }
 
 .circle-div {
-    background-color: #FFA100;
+    background-color: #448DE5;
     height: 60px;
     width: 60px;
     border-radius: 100%;
